--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.6",
     "axios": "^1.7.9",
     "lucide": "^0.473.0",
     "lucide-react": "^0.473.0",
